2003-03-02 Araki Ken <arakiken@users.sf.net>

	* Added PREV_PTY shortcut.
	  (Thanks to Minami Hirokazu san)

2003-03-01 Araki Ken <arakiken@users.sf.net>

	* Mlconfig writes changed configs alone to ~/.mlterm/main.
	  (Thanks to Kubota Tomohiro san)
	* Revived conf_menu_path option.
	  (Thanks to Nakada Nobuyoshi san)
	* Mlterm follows the change of _XROOTPMAP_ID.
	  (Thanks to Minami Hirokazu san)
	* "encoding" of mlterm configuration protocol accepts "auto".
	* Mlclient supports quoted string as arguments.
	* Each pty has its own window/icon title name.
	  (Thanks to Nanashi san)

2003-03-01 Tomohiro KUBOTA <kubota@debian.org>

	* Changed the way how to choose pty in mlconfig
	  from button array to combobox, in order to avoid
	  extremely wide mlconfig window when many ptys are
	  opened.

2003-02-27 Tomohiro KUBOTA <kubota@debian.org>

	* Added mc_flush() for buttons of font larger/smaller,
	  full reset, and pty select for mlconfig, so that the
	  change of the configuration is immediately accepted.

2003-02-23  MINAMI Hirokazu  <minami@mistfall.net>

	* REALLY fix the caching bug.

2003-02-23  MINAMI Hirokazu  <minami@mistfall.net>

	* Modifications to the background image were not applied
	  when the wallpaper had been changed. 
	  (Thanks to KATO Kazuyoshi san)

2003-02-18 Seiichi SATO <ssato@sh.rim.or.jp>

	* mlclient failed to connect to the server. Fixed.
	  (Thanks to Nanashi san)

2003-02-16 Araki Ken <arakiken@users.sf.net>

	* Mlconfig couldn't apply configuration changes more than once. Fixed.

2003-02-16 Tomohiro KUBOTA <kubota@debian.org>

	* Update manpage (man/mlterm.1) for -0/-9/-@ options.
	* Update manpage for OK/Apply/Cancel buttons and PTY List of mlconfig.

2003-02-15 Araki Ken <arakiken@users.sf.net>

	* Terminals with Arabic,ISCII,vertical writing etc options can be switched
	  by NEXT_PTY in the same Window.

2003-02-15 Araki Ken <arakiken@users.sf.net>

	* Tuned up mlconfig.

2003-02-15 Araki Ken <arakiken@users.sf.net>
